# gridora-forge

./: .gitignore  Cargo.toml  README.md  Trunk.toml  apple-touch-icon-template.html  index.html  og-image-template.html  styles.css
.github/workflows/: deploy.yml
docs/: SPEC.md
public/: CNAME  robots.txt  sitemap.xml
scripts/: build.ps1  dev.ps1
src/: main.rs
