[package]
name = "gridora-forge"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
base64 = "0.22.1"
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
gloo-file = { version = "0.3.0", features = ["futures"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3.91"
leptos = { version = "0.8.17", features = ["csr"] }
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.91", features = [
  "Blob",
  "BlobPropertyBag",
  "CanvasRenderingContext2d",
  "console",
  "CssStyleDeclaration",
  "Document",
  "DataTransfer",
  "DomRect",
  "DragEvent",
  "Element",
  "File",
  "FileList",
  "FilePropertyBag",
  "HtmlAnchorElement",
  "HtmlCanvasElement",
  "HtmlDocument",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "ImageBitmap",
  "Node",
  "Storage",
  "Url",
  "Window",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
